objects/QIDC__MDM_EntityTypeFilter_ims__c.object
<CustomObject>
    <description>Defines criteria info  that multiple entites mapped to same object</description>
    <fields>
        <fullName>QIDC__Criteria_Field_ims__c</fullName>
        <description>Criteria field that is set to the entity.</description>
        <inlineHelpText>Criteria field that is set to the entity.</inlineHelpText>
        <label>Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Criteria_Value_ims__c</fullName>
        <description>Criteria value that is set to the entity.</description>
        <inlineHelpText>Criteria value that is set to the entity.</inlineHelpText>
        <label>Criteria Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Object_Mapping_ims__c</fullName>
        <description>The MDM entity that the fields being mapped belong to.</description>
        <inlineHelpText>The MDM entity that the fields being mapped belong to.</inlineHelpText>
        <label>Object Mapping</label>
        <referenceTo>QIDC__MDM_Object_Mapping_ims__c</referenceTo>
        <relationshipLabel>MDM Entity Type Filter</relationshipLabel>
        <relationshipName>MDM_Entity_Type_Filter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MDM Entity Type Filter</label>
    <nameField>
        <label>MDM EntityTypeFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Entity Type Filter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>